objects/JBCXM__UIViews__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AccountReference__c</fullName>
        <label>Account Reference</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__BaseObject__c</fullName>
        <label>Base Object</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ChartConfig__c</fullName>
        <label>ChartConfig</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ColumnList__c</fullName>
        <label>Column List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Dimensions__c</fullName>
        <label>Dimensions</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ExternalViewId__c</fullName>
        <description>This field references the external MDA view (reporting space) id.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field references the external MDA view (reporting space) id.</inlineHelpText>
        <label>External View Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__FilterConditions__c</fullName>
        <label>Filter Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__GraphType__c</fullName>
        <label>Graph Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GroupDisplayOrder__c</fullName>
        <label>Group display order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GroupName__c</fullName>
        <label>Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__HavingClause__c</fullName>
        <label>Having clause</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Report Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsShown__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Shown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Measures__c</fullName>
        <label>Measures</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__QueryOptions__c</fullName>
        <label>Query Options</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportParams__c</fullName>
        <label>ReportParams</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SPType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success plan type</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>SPAttributesView</relationshipLabel>
        <relationshipName>SPAttributesView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SectionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section Id</label>
        <referenceTo>JBCXM__C360Sections__c</referenceTo>
        <relationshipLabel>UI Views</relationshipLabel>
        <relationshipName>UIViewsSectionId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ShowDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemName__c</fullName>
        <label>System Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UITabName__c</fullName>
        <label>UI Tab Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UI_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Visibility__c</fullName>
        <description>This field controls the visibility settings of the view. Example the view could set as publicly visible or only visible to a particular user (private)</description>
        <inlineHelpText>This field controls the visibility settings of the view. Example the view could set as publicly visible or only visible to a particular user (private)</inlineHelpText>
        <label>Visibility</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__VisualType__c</fullName>
        <label>Visualization Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__WhereClause__c</fullName>
        <label>Where clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>UI Views</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>